# contrastive-learning-for-eda

./: .gitignore  Makefile  README.md  final_report.md  final_report.tex  main.py  pyproject.toml  reproduce.ipynb  requirements.txt
config/: contrastive-pretrain-config.json  eval-config.json
data_preprocessing/: wesad_dataset.ipynb
data_preprocessing/WESAD_TEST/S10/: EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S10/: EDA_labelled.csv
data_preprocessing/WESAD_processed_28012023/S11/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S13/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S14/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S15/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S16/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S17/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S2/: EDA_labelled.csv  EDA_unlabelled.csv
data_preprocessing/WESAD_processed_28012023/S3/: EDA_labelled.csv  (+1 more)
data_transforms/: transform_data.py
dataset_splits/VERBIO/: 2023-01-12-LNSO_split_fold_0.csv  2023-01-12-LNSO_split_fold_1.csv  2023-01-12-LNSO_split_fold_2.csv  2023-01-12-LNSO_split_fold_3.csv  2023-01-12-LNSO_split_fold_4.csv
datasets/: dataset.py
loss/: contrastive_loss.py
modeling/evaluation/: evaluator.py
modeling/training/: train_epoch.py  train_history.py  trainer.py
models/: contrastive_model.py  model.py
(+497 files in other folders)
